# SmartResumeAssistant

./: .gitignore  README.md  app.py  helper.py  main.py  pyproject.toml  requirements.txt
notebooks/: Resume.ipynb
